--- a/index.jade
+++ b/index.jade
@@ -3,4 +3,5 @@ html(lang="en")
     head
         title Fortune Transportation
     body
-    h1 Fortune Transportation
+        h1 Fortune Transportation
+        // inject:js 
