--- a/index.jade
+++ b/index.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
     head
         title Fortune Transportation
+        // inject:css 
     body
         h1 Fortune Transportation
         // inject:js 
