--- a/index.jade
+++ b/index.jade
@@ -2,7 +2,10 @@ doctype html
 html(lang="en")
     head
         title Fortune Transportation
-        // inject:css 
+        // inject:css:lib 
+        // inject:css:app 
     body
         h1 Fortune Transportation
-        // inject:js 
+        img(src="assets/images/fortuneLogo.png")
+        // inject:js:lib 
+        // inject:js:app 
