Adds angular-material and relevant modules as bower dependencies

--- a/app/index.jade
+++ b/app/index.jade
@@ -5,7 +5,6 @@ html(lang="en")
         // inject:css:lib 
         // inject:css:app 
     body
-        h1 Fortune Transportation
-        img(src="assets/images/fortuneLogo.png")
+        div(ng-app="fortuneFrontEnd", ng-cloak)
         // inject:js:lib 
         // inject:js:app 
