Switches to gulp. Tests and linting still need to be added

--- a/app/index.jade
+++ b/app/index.jade
@@ -1,11 +1,8 @@
 doctype html
-html(lang="en")
+html
     head
         title Fortune Transportation
-        // inject:css:lib 
-        // inject:css:app 
+        // inject:css 
     body
         h1 Fortune Transportation
-        img(src="assets/images/fortuneLogo.png")
-        // inject:js:lib 
-        // inject:js:app 
+        // inject:js 
